After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686282 - metadata-store: updates don't work properly
metadata-store: updates don't work properly
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-17 09:58 UTC by Antía Puentes
Modified: 2012-10-18 17:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (871 bytes, patch)
2012-10-17 09:58 UTC, Antía Puentes
committed Details | Review

Description Antía Puentes 2012-10-17 09:58:34 UTC
Created attachment 226622 [details] [review]
Proposed patch

The sql update query is not generated correctly, it separates the attributes to be changed by "AND"s instead of ","s.

http://www.sqlite.org/lang_update.html
Comment 1 Juan A. Suarez Romero 2012-10-17 10:18:40 UTC
commit 428b15e0935874dbabd477ce1446605b18abf333
Author: Ant<C3><AD>a Puentes <apuentes@igalia.com>
Date:   Wed Oct 17 11:49:33 2012 +0200

    metadata-store: Fix the update query
    
    https://bugzilla.gnome.org/show_bug.cgi?id=686282

 src/metadata-store/grl-metadata-store.c |    2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)