metadata-store: Fix the update query

https://bugzilla.gnome.org/show_bug.cgi?id=686282